// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner invokes onClick func of action 1`] = `
<div
  className="Banner default"
>
  <IconSection
    status="default"
  />
  <div
    className="Content"
  >
    <a
      className="Dismiss"
      onClick={[MockFunction]}
    >
      <Close
        className="DismissIcon"
        size={24}
      />
    </a>
    <h5
      className="Title"
    >
      Test Banner
    </h5>
    <div
      className="Children"
    >
      <p>
        You know this is a banner
      </p>
    </div>
    <div
      className="Actions"
    >
      <Button
        onClick={[MockFunction]}
        outline={true}
        size="small"
      >
        Click me
      </Button>
    </div>
  </div>
</div>
`;

exports[`Banner renders correctly with default props 1`] = `
<div
  className="Banner default"
>
  <IconSection
    status="default"
  />
  <div
    className="Content"
  >
    <a
      className="Dismiss"
      onClick={[MockFunction]}
    >
      <Close
        className="DismissIcon"
        size={24}
      />
    </a>
    <h5
      className="Title"
    >
      Test Banner
    </h5>
    <div
      className="Children"
    >
      <p>
        You know this is a banner
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner renders multiple banner actions 1`] = `
<div
  className="Banner default"
>
  <IconSection
    status="default"
  />
  <div
    className="Content"
  >
    <a
      className="Dismiss"
      onClick={[MockFunction]}
    >
      <Close
        className="DismissIcon"
        size={24}
      />
    </a>
    <h5
      className="Title"
    >
      Test Banner
    </h5>
    <div
      className="Children"
    >
      <p>
        You know this is a banner
      </p>
    </div>
    <div
      className="Actions"
    >
      <Button
        key="0"
        onClick={[MockFunction]}
        outline={true}
        size="small"
      >
        Click Me 1
      </Button>
      <Button
        key="1"
        onClick={[MockFunction]}
        outline={true}
        size="small"
      >
        Click Me 2
      </Button>
    </div>
  </div>
</div>
`;

exports[`Banner renders status 1`] = `
<div
  className="Banner success"
>
  <IconSection
    status="success"
  />
  <div
    className="Content"
  >
    <a
      className="Dismiss"
      onClick={[MockFunction]}
    >
      <Close
        className="DismissIcon"
        size={24}
      />
    </a>
    <h5
      className="Title"
    >
      Test Banner
    </h5>
    <div
      className="Children"
    >
      <p>
        You know this is a banner
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner renders status 2`] = `
<div
  className="IconWrapper"
>
  <CheckCircle
    className="Icon successIcon"
    label="Success"
    size={30}
  />
  <div
    className="IconBackdrop"
  />
</div>
`;

exports[`Banner renders status 3`] = `
<div
  className="Banner danger"
>
  <IconSection
    status="danger"
  />
  <div
    className="Content"
  >
    <a
      className="Dismiss"
      onClick={[MockFunction]}
    >
      <Close
        className="DismissIcon"
        size={24}
      />
    </a>
    <h5
      className="Title"
    >
      Test Banner
    </h5>
    <div
      className="Children"
    >
      <p>
        You know this is a banner
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner renders status 4`] = `
<div
  className="IconWrapper"
>
  <Error
    className="Icon dangerIcon"
    label="Error"
    size={30}
  />
  <div
    className="IconBackdrop"
  />
</div>
`;

exports[`Banner renders status 5`] = `
<div
  className="Banner warning"
>
  <IconSection
    status="warning"
  />
  <div
    className="Content"
  >
    <a
      className="Dismiss"
      onClick={[MockFunction]}
    >
      <Close
        className="DismissIcon"
        size={24}
      />
    </a>
    <h5
      className="Title"
    >
      Test Banner
    </h5>
    <div
      className="Children"
    >
      <p>
        You know this is a banner
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner renders status 6`] = `
<div
  className="IconWrapper"
>
  <Error
    className="Icon warningIcon"
    label="Warning"
    size={30}
  />
  <div
    className="IconBackdrop"
  />
</div>
`;

exports[`Banner renders status 7`] = `
<div
  className="Banner info"
>
  <IconSection
    status="info"
  />
  <div
    className="Content"
  >
    <a
      className="Dismiss"
      onClick={[MockFunction]}
    >
      <Close
        className="DismissIcon"
        size={24}
      />
    </a>
    <h5
      className="Title"
    >
      Test Banner
    </h5>
    <div
      className="Children"
    >
      <p>
        You know this is a banner
      </p>
    </div>
  </div>
</div>
`;

exports[`Banner renders status 8`] = `
<div
  className="IconWrapper"
>
  <InfoOutline
    className="Icon infoIcon"
    label="Info"
    size={30}
  />
  <div
    className="IconBackdrop"
  />
</div>
`;
